working on handling the form

--- a/browser/cct-capt.html
+++ b/browser/cct-capt.html
@@ -8,14 +8,14 @@
 </head>
 
 <body>
-    <form>
+    <form id="tasksettings">
         <p>
             <label for="stimulusset">
                 Stimulus Set:
             </label>
             <select id="stimulusset">
-                <option>CCT</option>
-                <option>CAPT</option>
+                <option value="cct">CCT</option>
+                <option value="capt">CAPT</option>
             </select>
         </p>
         <p>
@@ -23,8 +23,8 @@
                 Condition:
             </label>
             <select id="condition">
-                <option>AV</option>
-                <option>auditory-only</option>
+                <option value="av">AV</option>
+                <option value="ao">auditory-only</option>
             </select>
         </p>
         <br></br>
