force loading of trials prior to experiment.run function

--- a/browser/cct-capt.html
+++ b/browser/cct-capt.html
@@ -4,7 +4,7 @@
 <head>
     <link href="cct-capt.css" rel="stylesheet" />
     <script src="jatos.js" defer></script>
-    <script src="index.js" defer></script>
+    <script src="cct-capt.js" defer></script>
 </head>
 
 <body>
