adding cct capt orders, incorporating

--- a/browser/cct-capt.html
+++ b/browser/cct-capt.html
@@ -14,8 +14,19 @@
                 Stimulus Set:
             </label>
             <select id="stimulusset">
-                <option value="cct">CCT</option>
-                <option value="capt">CAPT</option>
+                <option value="CCT">CCT</option>
+                <option value="CAPT">CAPT</option>
+            </select>
+        </p>
+        <p>
+            <label for="order">
+                Order:
+            </label>
+            <select id="order">
+                <option value="A">A</option>
+                <option value="B">B</option>
+                <option value="C">C</option>
+                <option value="D">D</option>
             </select>
         </p>
         <p>
