adding snr select

--- a/browser/cct-capt.html
+++ b/browser/cct-capt.html
@@ -38,6 +38,15 @@
                 <option value="ao">auditory-only</option>
             </select>
         </p>
+        <p>
+            <label for="snr">
+                SNR:
+            </label>
+            <select id="snr">
+                <option value="noise">0 dB SNR</option>
+                <option value="quiet">quiet</option>
+            </select>
+        </p>
         <br></br>
         <button type="submit">Start</button>
     </form>
